--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>javascript</h1>
     <!--  -->
     <link rel="stylesheet" href="style.css" />
-    <script src="quokke.js"></script>
+    <script src="js/factoria.js"></script>
   </body>
 </html>
