--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>javascript</h1>
+    <h1 id="titulo">javascript</h1>
+    <button id="btn">Button</button>
+    <button id="btnJQ">Button</button>
     <!--  -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
-    <script src="js/factoria.js"></script>
+    <script src="quokke.js"></script>
   </body>
 </html>
