--- a/index.html
+++ b/index.html
@@ -8,14 +8,23 @@
   </head>
   <body>
     <h1 id="titulo">javascript</h1>
-    <button id="btn">Button</button>
-    <button id="btnJQ">Button</button>
+    <div class="container">
+      <div class="seccion">
+        <p class="prrafo" draggable="true" id="parrado-1">1. Primero</p>
+        <p class="prrafo" draggable="true" id="parrado-2">2. Segundo</p>
+      </div>
+      <div class="seccion">
+        <p class="prrafo" draggable="true" id="parrado-3">3. Tercero</p>
+        <p class="prrafo" draggable="true" id="parrado-4">4. Cuarto</p>
+      </div>
+      <div class="imagen">
+        <picture class="marco-papelera">
+          <img class="papelera" src="trash.jpg" alt="trash" />
+        </picture>
+      </div>
+    </div>
     <!--  -->
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
+
     <link rel="stylesheet" href="style.css" />
     <script src="quokke.js"></script>
   </body>
