--- a/index.html
+++ b/index.html
@@ -8,22 +8,12 @@
   </head>
   <body>
     <h1 id="titulo">javascript</h1>
-    <div class="container">
-      <div class="seccion">
-        <p class="prrafo" draggable="true" id="parrado-1">1. Primero</p>
-        <p class="prrafo" draggable="true" id="parrado-2">2. Segundo</p>
-      </div>
-      <div class="seccion">
-        <p class="prrafo" draggable="true" id="parrado-3">3. Tercero</p>
-        <p class="prrafo" draggable="true" id="parrado-4">4. Cuarto</p>
-      </div>
-      <div class="imagen">
-        <picture class="marco-papelera">
-          <img class="papelera" src="trash.jpg" alt="trash" />
-        </picture>
-      </div>
-    </div>
+    <div id="map"></div>
     <!--  -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA29kTROw9uSPvX6SMCAibMGb6oWM3rMiI&callback=initMap&v=weekly"
+      async
+    ></script>
 
     <link rel="stylesheet" href="style.css" />
     <script src="quokke.js"></script>
